--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body {
     url("./images/wallpapersden.com_naruto-4k-cool-anime-art_3840x2160.jpg")
     no-repeat; */
   background: center top 30% rgba(0, 0, 0, 0.6)
-    url(https://images.unsplash.com/photo-1691712820599-c159327225cb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1vZi10aGUtZGF5fHx8fGVufDB8fHx8fA%3D%3D&dpr=2&auto=format%2Ccompress&fit=crop&w=999&h=594)
+    url(https://images.pexels.com/photos/15939068/pexels-photo-15939068.jpeg?auto=compress&cs=tinysrgb&fit=crop&h=500&w=1000)
     /* url(https://images.pexels.com/photos/7463097/pexels-photo-7463097.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1) */
     no-repeat;
   background-size: cover;
@@ -130,8 +130,7 @@ body {
   transform: translate(-50%);
   font-size: 1.5rem;
   color: #008d6f;
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
+  background: rgb(0 0 0 / 1%);
 }
 
 .search-box i:hover {
@@ -140,6 +139,7 @@ body {
 }
 
 .search-box input {
+  color: rgb(255, 255, 255);
   width: 100%;
   height: 100%;
   padding-left: 55px;
@@ -151,32 +151,18 @@ body {
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px); */
   box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.6);
-  background-color: rgba(255, 255, 255, 0.16);
+  background-color: transparent;
   backdrop-filter: blur(32px);
   -webkit-backdrop-filter: blur(32px);
   position: relative;
   border-radius: 41px;
 }
-
-/* 
-.gallery {
-    margin: 50px 40px;
-    background-color: burlywood;
-    background-color: #fff;
-    border-radius: 5px;
-} */
-/* 
-.images {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    gap: 30px;
-    list-style: none;
-} */
-
-/* .card img {
-    border-radius: 5px;
-} */
+input::placeholder {
+  color: rgb(255, 255, 255);
+  opacity: 1;
+  font-size: 1em;
+  padding-left: 5px;
+}
 
 .gallery {
   display: flex;
@@ -259,7 +245,7 @@ img {
 
 a:link,
 a:visited {
-  color: #fff;
+  color: #333;
 }
 
 .photographer-link {
@@ -364,6 +350,7 @@ header .photographer span {
 }
 
 header .buttons i {
+  color: #fff;
   width: 40px;
   height: 40px;
   background: cadetblue;
@@ -426,12 +413,12 @@ header .buttons i {
     left: 30px;
     font-size: 1.4rem;
     position: absolute;
-    background: transparent;
+    background: rgb(0 0 0 / 0%);
   }
 
   .search-box input {
     width: 100%;
-    color: #333;
+    color: rgb(255, 255, 255);
     box-shadow: none;
     /* background-color: rgba(255, 255, 255, 0); */
     backdrop-filter: none;
@@ -440,7 +427,7 @@ header .buttons i {
     -webkit-backdrop-filter: none; */
   }
   input::placeholder {
-    color: #fff;
+    color: rgb(255, 255, 255);
     opacity: 1;
     font-size: 1em;
     padding-left: 5px;
@@ -464,6 +451,7 @@ header .buttons i {
   }
 
   header .buttons i {
+    color: #fff;
     width: 30px;
     height: 30px;
     line-height: 30px;
