--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body {
     url("./images/wallpapersden.com_naruto-4k-cool-anime-art_3840x2160.jpg")
     no-repeat; */
   background: center top 30% rgba(0, 0, 0, 0.6)
-    url(https://images.pexels.com/photos/15939068/pexels-photo-15939068.jpeg?auto=compress&cs=tinysrgb&fit=crop&h=500&w=1000)
+    url(https://images.unsplash.com/photo-1695844918823-8ec54d7d839c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1726&q=80)
     /* url(https://images.pexels.com/photos/7463097/pexels-photo-7463097.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1) */
     no-repeat;
   background-size: cover;
